<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radio_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/level0"
            android:text="@string/khong_bao_gio"
            android:padding="10dp"
            android:textSize="16sp"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/level1"
            android:text="@string/dung_gio"
            android:textSize="16sp"
            android:layoutDirection="rtl"
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/level2"
            android:text="@string/bd_30"
            android:textSize="16sp"
            android:padding="10dp"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/level3"
            android:text="@string/bd_7"
            android:padding="10dp"
            android:textSize="16sp"
            android:layoutDirection="rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/level4"
            android:text="@string/bd_1"
            android:textSize="16sp"
            android:layoutDirection="rtl"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/accpect_btn"
            android:text="@string/accept"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textSize="16sp"
            android:backgroundTint="@color/xanh"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
</LinearLayout>